CRITICAL FIX: Explicit CORS headers (wildcard not allowed with credentials)
## Problem Identified

When testing CORS with Authorization header, backend returns 502 Bad Gateway:
```bash
curl -X OPTIONS /api/auth/login \
  -H "Access-Control-Request-Headers: content-type,authorization"
# Returns: HTTP/2 502
```

## Root Cause

CORS specification PROHIBITS using wildcard "*" in Access-Control-Allow-Headers
when Access-Control-Allow-Credentials is set to true.

Previous configuration:
```java
configuration.setAllowedHeaders(List.of("*"));
configuration.setAllowCredentials(true);  // ❌ INVALID COMBINATION
```

## Solution

Explicitly specify all allowed headers:
```java
configuration.setAllowedHeaders(Arrays.asList(
    "Authorization",
    "Content-Type",
    "Accept",
    "Origin",
    "Access-Control-Request-Method",
    "Access-Control-Request-Headers"
));
configuration.setAllowCredentials(true);  // ✅ VALID
```

This matches CORS spec: credentials mode requires explicit header enumeration.

## Files Changed

- SecurityConfig.java:108-115 - Explicit headers list instead of wildcard

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>